<resources>
    <string name="app_name">Toronto Waste Wizard</string>
    <string name="toronto_wizard">Toronto Wizard</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="zip_code">Zip Code</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back To Login</string>
    <string name="data_not_valid">Data not valid</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="registered_failed">Registration failed, used same email address before</string>
    <string name="waste_management_system">Waste Management System</string>
    <string name="waste_name">Waste Name</string>
    <string name="submit">Submit</string>
    <string name="or">OR</string>
    <string name="scan">Scan</string>
    <string name="login">Login</string>
    <string name="blue_bin">Blue Bin</string>
    <string name="description">Description</string>
    <string name="coffee_cup_lid">Coffee Cup lid</string>
    <string name="error_keyword_search_message">Error finding the keyword</string>
    <string name="no_waste_added_to_fav">No waste added to Favourite</string>
    <string name="login_success_message">Login Successfully</string>
    <string name="login_failed_message">Login failed, check username or password</string>

</resources>
