<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.70">

        <ImageView
            android:id="@+id/search_bin_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/bluebin" />

        <TextView
            android:id="@+id/search_bin_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_bin"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/coffee_cup_lid"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/search_fav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/fav"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/search_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</LinearLayout>